<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Contacto">

    <include
        android:id="@+id/miActionBar"
        layout="@layout/actionbar">
    </include>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <TextView
            android:id="@+id/tvContacto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/contacto"
            android:textSize="@dimen/titulo_contacto"
            android:gravity="center"
            android:textStyle="bold"/>

        <EditText
            android:id="@+id/txtNombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/nombre"
            android:inputType="textPersonName"
            android:textSize="@dimen/textos"
            android:textColor="@color/colorPrimaryDark"/>


        <EditText
            android:id="@+id/txtEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:hint="@string/email"
            android:ems="10"
            android:inputType="textEmailAddress"
            android:textSize="@dimen/textos"
            android:textColor="@color/colorPrimaryDark"/>

        <EditText
            android:id="@+id/txtDescripcion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:hint="@string/descripcion"
            android:ems="10"
            android:inputType="textMultiLine"
            android:textSize="@dimen/textos"
            android:textColor="@color/colorPrimaryDark"/>

        <Button
            android:id="@+id/btnEnviarCorreo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/enviar"
            />

    </LinearLayout>

</LinearLayout>