<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Informacion"
    android:orientation="vertical">

    <include
        android:id="@+id/miActionBar"
        layout="@layout/actionbar">
    </include>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvDesarrolador"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/desarollador"
            android:textStyle="bold"
            android:text="@string/creador"
            android:layout_marginBottom="@dimen/margen_creador"/>

        <TextView
            android:id="@+id/tvInformacion1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/informacion1"
            android:textSize="@dimen/informacion"
            android:layout_marginBottom="@dimen/margen_ingeniero"/>

        <TextView
            android:id="@+id/tvInformacion2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/informacion2"
            android:textSize="@dimen/informacion"
            android:layout_gravity="center_vertical|right" />

    </LinearLayout>

</LinearLayout>
